Set example manifests' namespace to "default".

--- a/example/kustomization.yaml
+++ b/example/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - manifests/serviceaccount.yaml
   - manifests/statefulset.yaml
 
+namespace: default
 nameSuffix: -darwinia
 commonLabels:
   app: kubevali
