Set --log-level in example to 6.

--- a/example/manifests/statefulset.yaml
+++ b/example/manifests/statefulset.yaml
@@ -62,6 +62,7 @@ spec:
           command:
             - /kubevali/kubevali
             - --config=/config/kubevali.yaml
+            - --log-level=6
 
           resources:
             requests:
