--- a/example/kustomization.yaml
+++ b/example/kustomization.yaml
@@ -18,6 +18,8 @@ images:
     newTag: sha-3bf7399
   - name: quay.io/darwinia-network/darwinia
     newTag: v0.8.2
+  - name: quay.io/darwinia-network/node-liveness-probe
+    newTag: v0.3.0
 
 configMapGenerator:
   - name: kubevali
