--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,8 @@ jobs:
           TAG=${TAG:-NO_TAG}
 
           CGO_ENABLED=0
+
+          go get -u github.com/mitchellh/gox
           gox -verbose \
             -output "bin/{{.Dir}}_{{.OS}}_{{.Arch}}" \
             -osarch "linux/amd64 linux/arm64 linux/arm darwin/amd64 windows/amd64" \
