Enable --watch-config in example.

--- a/example/manifests/statefulset.yaml
+++ b/example/manifests/statefulset.yaml
@@ -54,6 +54,7 @@ spec:
           command:
             - /kubevali/kubevali
             - --config=/config/kubevali.yaml
+            - --watch-config
             - --log-level=6
 
           ports:
