--- a/example/kustomization.yaml
+++ b/example/kustomization.yaml
@@ -2,10 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - manifests/clusterrole.yaml
-  - manifests/clusterrolebinding.yaml
-  - manifests/serviceaccount.yaml
-  - manifests/statefulset.yaml
+  - ../deploy/manifests
 
 namespace: default
 nameSuffix: -darwinia
