--- a/deploy/manifests/clusterrole.yaml
+++ b/deploy/manifests/clusterrole.yaml
@@ -3,6 +3,20 @@ kind: ClusterRole
 metadata:
   name: kubevali
 rules:
+  #
+  # Required by template functions:
+  # getRandomNodeIP, getNodeIPWithIndex
+  #
   - apiGroups: [""]
     resources: ["nodes"]
     verbs: ["get", "list", "watch"]
+
+  #
+  # Required by nodeService
+  #
+  - apiGroups: [""]
+    resources: ["services"]
+    verbs: ["get", "create", "update"]
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["get"]
