Add Service and headless Service in the Kubernetes manifests.

--- a/deploy/manifests/statefulset.yaml
+++ b/deploy/manifests/statefulset.yaml
@@ -3,7 +3,7 @@ kind: StatefulSet
 metadata:
   name: kubevali
 spec:
-  serviceName: kubevali
+  serviceName: kubevali-headless
   replicas: 1
 
   volumeClaimTemplates:
