--- a/deploy/manifests/kustomization.yaml
+++ b/deploy/manifests/kustomization.yaml
@@ -8,3 +8,13 @@ resources:
   - statefulset.yaml
   - service.yaml
   - service-headless.yaml
+
+images:
+  - name: quay.io/darwinia-network/kubevali
+    newTag: v0.4.2
+
+  - name: quay.io/darwinia-network/snapshot-init-container
+    newTag: v0.2.3
+
+  - name: quay.io/darwinia-network/node-liveness-probe
+    newTag: v0.5.1
