--- a/deploy/example/kustomization.yaml
+++ b/deploy/example/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../deploy/manifests
+  - ../manifests
 
 namespace: default
 nameSuffix: -darwinia
@@ -11,14 +11,8 @@ commonLabels:
   chain: darwinia
 
 images:
-  - name: quay.io/darwinia-network/kubevali
-    newTag: v0.3.0
   - name: quay.io/darwinia-network/darwinia
     newTag: v0.10.0
-  - name: quay.io/darwinia-network/node-liveness-probe
-    newTag: v0.5.1
-  - name: quay.io/darwinia-network/snapshot-init-container
-    newTag: v0.1.0
 
 configMapGenerator:
   - name: kubevali
