--- a/deploy/manifests/statefulset.yaml
+++ b/deploy/manifests/statefulset.yaml
@@ -93,10 +93,10 @@ spec:
 
           resources:
             requests:
-              cpu: 200m
-              memory: 500Mi
+              cpu: 300m
+              memory: 1Gi
             limits:
-              cpu: 500m
+              cpu: 1000m
               memory: 2Gi
 
         - name: liveness-probe
